--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "migration": "yarn prisma migrate dev --name",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -22,8 +23,18 @@
   "dependencies": {
     "@nestjs/common": "^9.4.2",
     "@nestjs/core": "^9.4.2",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^4.15.0",
+    "@types/dotenv": "^8.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "express-oauth2-jwt-bearer": "^1.5.0",
+    "jwks-rsa": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
